Update for video stream

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.6
 
 MAINTAINER Miseon YU <mmms543.keti@gmail.com>
-EXPOSE 9000
+EXPOSE 5000
 ENV APP /www
 
 RUN mkdir $APP
@@ -9,9 +9,8 @@ ADD . $APP
 WORKDIR $APP
 
 RUN python -m pip install --upgrade pip 
-RUN pip3 install Flask flask_socketio eventlet gunicorn
+RUN pip3 install Flask uwsgi influxdb
 
 RUN apt-get update && apt-get install vim -y
 # run uWSGI with the ini file
-WORKDIR $APP/src/webapp
-CMD gunicorn main:app --worker-class eventlet -w 1 --bind 0.0.0.0:9000 --reload
+CMD uwsgi uwsgi.ini
