--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,26 @@ services:
       build:
         context: ./flask
       ports:
-      - "9000:9000"
+      - "5000:5000"
       volumes:
       - "./flask:/www"
       networks:
       - backend
+      
+  nginx:
+      container_name: nginx
+      image: "nginx:test"
+      build:
+        context: ./nginx
+      volumes:
+      - "./nginx:/etc/nginx/conf.d"
+      ports:
+       - "80:80"
+      networks:
+       - backend
+      depends_on:
+       - flask
+
 networks:
   backend:
     driver: bridge
