--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -11,4 +11,4 @@ RUN python3 -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
 
 # run uWSGI with the ini file
-CMD uwsgi uwsgi.ini
+CMD python3 /www/src/webapp/main.py
