--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,19 +1,30 @@
-upstream flask_uwsgi {
+upstream backend {
     server flask:5000;
+    server 127.0.0.1:5010;
 }
-
 server {
+
     listen 80;
     server_name 127.0.0.1;
 
-    location / {
-      include uwsgi_params;
-      # import the contents of the file named uwsgi_params
-      uwsgi_pass flask_uwsgi;
-      # using flask as the host to route traffic to.
-      # because docker-compose will connect 
-      # Flask and Nginx through flask hostname
+   location / {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://backend;
+    }
+
+    location /socket.io {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_buffering off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_pass http://backend/socket.io;
     }
 
 }
-
